--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     color: #1E2125;
-    font-family: Poppins;
 }
 body{
     background-color: #ecf0f3 !important;
@@ -11,6 +10,8 @@ nav{
     box-shadow: .01px 0px 20px #b3b8be;
     margin-bottom: 50px;
     position: fixed;
+    font-family: Poppins;
+
 }
 nav.navbar{
     
@@ -22,6 +23,8 @@ nav.navbar{
     color: #1E2125 !important;
 }
 .introduction{
+    font-family: Poppins;
+
     border-bottom: 1px solid #1E2125;
     padding: 5rem 0 !important;
 }
@@ -110,5 +113,81 @@ nav.navbar{
 }
 /* features part start  */
 .feature{
+    border-bottom: 1px solid #1E2125;
     width: 100%;
 }
+.feature .subtitle {
+    color:#FF014F;
+    letter-spacing: 2px;
+    display: block;
+    line-height: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+.feature .title{
+    color: #1E2125;
+    letter-spacing: 2px;
+    font-size: 60px;
+    font-weight: 700;
+    margin-top: 15px;
+    margin-bottom: 0;
+}
+.feature .card{
+    border-radius: 10px;
+    box-shadow: 1px 1px 5px #a8b2b8;
+    background-image: linear-gradient(to right, #E4EAEE, white);
+}
+
+/* .feature .all-feature-box .row{
+    
+}
+.feature .all-feature-box .row .col-3{
+    border-radius: 10px;
+    margin:  0 10px;
+    background-image: linear-gradient(to right, #d0e1ec, white);
+    border-radius: 6px;
+    font-size: 18px;
+    box-shadow: 1px 1px 5px #a8b2b8;
+} */
+
+  /* Portfolio part  */
+  .portfolio{
+      border-bottom: 1px solid #1E2125;
+  }
+  .portfolio .top .title{
+      
+      font-size: 45px;
+
+  }
+  .portfolio .top .subtitle{
+      color: #f70445;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+  }
+  .portfolio .row .img-box{
+      overflow: hidden;
+      border-radius: 10px;
+  }
+  .portfolio .row .img{
+      border-radius: 10px;
+      transform: scale(1);
+  }
+  /* .portfolio .row .img:hover{
+      cursor: pointer;
+      transform: scale(1.2);
+  } */
+  .portfolio .row .col-4 .card {
+      border-radius: 10px;
+      box-shadow: 1px 1px 5px #a8b2b8;
+      background-image: linear-gradient(to right, #E4EAEE, white);
+  }
+  .resume .container{
+      border-bottom: 1px solid #1E2125;
+  }
+  .resume .container .top .subtitle{
+      color: #f70445;
+  }
+  .resume .container .top .title{
+      font-size: 50px;
+      font-weight: 600;
+  }
