--- a/style.css
+++ b/style.css
@@ -7,11 +7,12 @@ body{
     background-color: #ecf0f3 !important;
 }
 nav{
+    width: 100%;
     box-shadow: .01px 0px 20px #b3b8be;
     margin-bottom: 50px;
     font-family: Poppins;
-    /* z-index: 999;
-    position: fixed !important; */
+    z-index: 999;
+    position: fixed !important; 
 }
 nav.navbar{
     
@@ -181,22 +182,22 @@ header .navbar .navbar-nav .nav-link{
       box-shadow: 1px 1px 5px #a8b2b8;
       background-image: linear-gradient(to right, #E4EAEE, white);
   }
-  .resume .container{
+  .resume .container-fluid{
       border-bottom: 1px solid #1E2125;
   }
-  .resume .container .top .subtitle{
+  .resume .container-fluid .top .subtitle{
       color: #f70445;
       font-weight: 500;
   }
-  .resume .container .top .title{
+  .resume .container-fluid .top .title{
       font-size: 70px;
       font-weight: 600;
   }
-  /* skill-name  */
-  .resume .container .skill-name{
-
+  .textcolor{
+      color: #f70445;
   }
-  .resume .container .skill-name .nav .nav-item{
+  /* skill-name  */
+  .resume .container-fluid .skill-name .nav .nav-item{
     
      border-radius: 5px;      
      margin-bottom: 5px;
@@ -204,7 +205,7 @@ header .navbar .navbar-nav .nav-link{
      background-image: linear-gradient(to right, #E4EAEE, white);
 
   }
-  .resume .container .skill-name .nav .nav-item .nav-link{
+  .resume .container-fluid .skill-name .nav .nav-item .nav-link{
     line-height: 65px;
     text-align: center;
     color: #1E2125;
@@ -240,7 +241,7 @@ header .navbar .navbar-nav .nav-link{
       width: 20px;
       height: 20px;
       background-color: #ffffff;
-      top: 7%;
+      top: 6.7%;
       left: -2.1%;
       border-radius: 100%;
       border: 4px solid #f70445;
@@ -260,3 +261,72 @@ header .navbar .navbar-nav .nav-link{
       
       border-bottom: 1px solid #a8b2b8;
   } */
+  .testimonial{
+      border-bottom: 1px solid #1E2125;
+  }
+  .testimonial .container-fluid .testimonial-text h1{
+    font-size: 60px;
+    font-weight: bold;
+  }
+
+  .testimonial .container-fluid .test-box .row .col-5 .card{
+      border-radius: 10px;
+      background-image: linear-gradient(to right, #d7dde0, white);
+      box-shadow: 1px 1px 5px #a8b2b8;
+  }
+  .testimonial .container-fluid .test-box .row .col-5 .card .img-box{
+      border-radius: 10px;
+  }
+  .testimonial .container-fluid .test-box .row .col-5 .card .img-box img{
+      border-radius: 10px;
+  }
+  /* right-part .testimonial */
+  /* #quote{
+      padding: 500px;
+  } */
+  #quote .icon{
+      border: none;
+      font-size: 110px;
+  }
+  #quote .icon-left{
+      border-radius: 5px;
+      padding: 12px 20px;
+      border: none;
+      font-size: 20px;
+      margin-right: 5px;
+      background-image: linear-gradient(to right, #d7dde0, white);
+      box-shadow: 1px 1px 5px #a8b2b8;
+  }
+  
+  #quote .icon-right{
+    border-radius: 5px;
+    padding: 12px 20px;
+    border: none;
+    font-size: 20px;
+    margin-left: 5px;
+    background-image: linear-gradient(to right, #d7dde0, white);
+    box-shadow: 1px 1px 5px #a8b2b8;
+}
+#c5c5{
+    background-image: linear-gradient(to right, #d7dde0, white);
+    box-shadow: 1px 1px 15px #a8b2b8;
+    border-radius: 10px;
+    border: none;
+}
+#testimonial-border-bottom{
+    border-bottom: 1px solid #1E2125;
+}
+#top-rt{
+    text-align: center;
+    
+    font-size: 20px;
+    padding: 10px;
+    background: linear-gradient(to right, rgb(222, 227, 231), rgb(255, 255, 255));
+    border-radius: 5px;
+    display: inline;
+    box-shadow: 1px 1px 15px #c7c9d3;
+
+}
+#top-rt i{
+    color: goldenrod !important;
+}
