--- a/style.css
+++ b/style.css
@@ -3,8 +3,18 @@
     padding: 0;
     color: #1E2125;
 }
+.active{
+    color: #f70445 !important;
+}
 body{
     background-color: #ecf0f3 !important;
+}
+nav.navbar ul .btn-css-color{
+    border: none;
+    padding: 10px 15px;
+    background-image: linear-gradient(to right, #d6e4ee, #f2f9ff) !important;
+    font-family: Poppins;
+    font-weight:600;
 }
 nav{
     width: 100%;
@@ -12,6 +22,7 @@ nav{
     margin-bottom: 50px;
     font-family: Poppins;
     z-index: 999;
+    height: 90px;
     position: fixed !important; 
 }
 nav.navbar{
@@ -33,7 +44,7 @@ header .navbar .navbar-nav .nav-link{
     width: 100%;
     margin-top: 110px;
     border-radius: 10px;
-    background-image: linear-gradient(to right, #E4EAEE, white);
+    background-image: linear-gradient(to right, #E2E8EC, #f2f9ff);
 }
 .iamge img{
     margin-top: -110px;
@@ -65,9 +76,9 @@ header .navbar .navbar-nav .nav-link{
   /* icon */
 .icon-share .left-icon span{
     font-size: 16px;
+    font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 2px;
-    font-weight: 300;
     display: block;
     margin-bottom: 20px;
 }
@@ -88,6 +99,16 @@ header .navbar .navbar-nav .nav-link{
     font-size: 18px;
     box-shadow: 1px 1px 5px #a8b2b8;
 }
+.icon-share .left-icon ul li a:hover{
+    background-image: linear-gradient(to right, #FB034A, #E01029);
+    transition: all .3s linear;
+}
+.icon-share .left-icon ul li a:hover i{
+    
+    color: #ffffff;
+    transition: all .3s linear;
+}
+/* icon right part start  */
 .icon-share .right-icon span{
     font-size: 16px;
     text-transform: uppercase;
@@ -138,7 +159,20 @@ header .navbar .navbar-nav .nav-link{
     box-shadow: 1px 1px 5px #a8b2b8;
     background-image: linear-gradient(to right, #E4EAEE, white);
 }
-
+.feature .card:hover{
+    transition: all .3s linear;
+    background-image: linear-gradient(to right, #FE014D, #DB1021);
+    cursor: pointer;
+    color: white;
+}
+.feature .card:hover i{
+    color: white;
+    transition: all .3s linear;
+}
+.feature .card:hover p{
+    color: white;
+    transition: all .3s linear;
+}
 /* .feature .all-feature-box .row{
     
 }
@@ -165,6 +199,12 @@ header .navbar .navbar-nav .nav-link{
       text-transform: uppercase;
       letter-spacing: 2px;
   }
+  .portfolio .row .card .card-body .card-title{
+      color: #DB1021;
+  }
+  .portfolio .row .card .card-body .row h3{
+      color: #1E2125;
+  }
   .portfolio .row .img-box{
       overflow: hidden;
       border-radius: 10px;
@@ -173,6 +213,23 @@ header .navbar .navbar-nav .nav-link{
       border-radius: 10px;
       transform: scale(1);
   }
+  .portfolio .row .card:hover img{
+    transform: scale(1.1);
+    transition: all .2s linear;
+    
+  }
+  .portfolio .row .card .card-body .row h3 i{
+      opacity: 0;
+  }
+  .portfolio .row .card:hover .card-body .row h3{
+      color: #F2073E;
+      transition: all .5s linear;
+  }
+  .portfolio .row .card:hover .card-body .row h3 i{
+    color: #F2073E;
+    opacity: 1;
+    transition: all .5s linear;
+}
   /* .portfolio .row .img:hover{
       cursor: pointer;
       transform: scale(1.2);
@@ -209,8 +266,15 @@ header .navbar .navbar-nav .nav-link{
     line-height: 65px;
     text-align: center;
     color: #1E2125;
-    font-weight: 500;
+    font-weight: 700;
   }
+  .resume .container-fluid .skill-name .nav .nav-item 
+  .nav-link:hover{
+      color: #f70445;
+      transition: all .3s linear;
+
+  }
+  
   .skill-item .education .row .col-6 .left-border{
       border-left: 4px solid #f70445;
       
@@ -359,7 +423,16 @@ header .navbar .navbar-nav .nav-link{
     background: linear-gradient(to right, rgb(222, 227, 231), rgb(255, 255, 255));
     box-shadow: 1px 1px 15px #c7c9d3;
 }
+#item-right .brand-img-box{
+    width: 100%;
+    height: 80%;
+
+}
+#item-right .brand-img-box img{
+    height: 80%;
+}
 #item-right .card{
+    height: 20em;
     border-radius: 10px;
     background: linear-gradient(to right, rgb(222, 227, 231), rgb(255, 255, 255));
     box-shadow: 1px 1px 15px #c7c9d3;
@@ -509,3 +582,5 @@ header .navbar .navbar-nav .nav-link{
     border-radius: 10px;
     box-shadow: 1px 1px 5px #a8b2b8;
 }
+/* Footer part start  */
+/* .footer.container-fluid h6 */
